--- a/index.html
+++ b/index.html
@@ -12,5 +12,55 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>
+      <!-- Nav -->
+      <div class="nav container">
+        <!-- Logo -->
+        <a href="#" class="logo">Sasmith</a>
+        <!-- Navbar -->
+        <ul class="navbar">
+          <li><a href="#home" class="nav-link">Home</a></li>
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#services" class="nav-link">Services</a></li>
+          <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
+          <li><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+
+        <!-- Menu Icon -->
+        <div class="menu-icon">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Home -->
+    <section class="home" container="home">
+      <div class="home-content">
+        <div class="home-img">
+          <img src="img/profile.png" alt="" />
+        </div>
+        <div class="home-text">
+          <h3>Hello</h3>
+          <h2>I'm <span class="color">Sasmith</span></h2>
+          <p>
+            I'm <span class="color">CEO</span> of this company with a strong passion for building <span class="color">web application</span> & <span class="color">Cyber Security</span> with great user experience.
+            <br>Here's a bit more <span class="color">about me.</span>
+          </p>
+
+          <!-- Social -->
+           <div class="social">
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></i></a>
+           </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
