About Section Completed

--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
       </div>
     </section>
 
+    <!-- About -->
+    <section class="about container" id="about">
+        <!-- Heading -->
+         <h2 class="heading">About</h2>
+        <!-- About Content  -->
+         <div class="about-content">
+            <div class="about-data">
+                <span>About Me</span>
+                <h2>Web Developer, <br>
+                    Cyber Security & Web Designer
+                </h2>
+                <a href="assets/Professional CV Resume.pdf" class="btn" download="">
+                    Download CV
+                    <i class='bx bx-download' ></i>
+                </a>
+            </div>
+            <div class="about-text">
+                <p>Hello! I am Sasmith Manawadu. Full Stack Developer</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, tempora, beatae</p>
+                <p>Get your project book with contact button.</p>
+            </div>
+         </div>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
