Services Section Completed

--- a/index.html
+++ b/index.html
@@ -84,6 +84,34 @@
             </div>
          </div>
     </section>
+    <!-- Services -->
+     <section class="services container" id="services">
+        <!-- Heading -->
+         <h2 class="heading">Services</h2>
+         <!-- Service Content -->
+          <div class="services-content">
+            <div class="services-box">
+                <i class='bx bx-code-alt' ></i>
+                <h2>Web Development</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+            </div>
+
+            
+            <div class="services-box">
+                <i class='bx bx-lock' ></i>
+                <h2>Cyber Security</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-brush' ></i>
+                <h2>Web Designing</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+            </div>
+
+
+          </div>
+     </section>
 
     <script src="js/script.js"></script>
   </body>
