Portfolio Section Completed

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </header>
 
     <!-- Home -->
-    <section class="home" container="home">
+    <section class="home" container="home" id="home">
       <div class="home-content">
         <div class="home-img">
-          <img src="img/profile.png" alt="" />
+          <img src="img/profile-pro.png" alt="" />
         </div>
         <div class="home-text">
           <h3>Hello</h3>
@@ -89,7 +89,7 @@
         <!-- Heading -->
          <h2 class="heading">Services</h2>
          <!-- Service Content -->
-          <div class="services-content">
+        <div class="services-content">
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
                 <h2>Web Development</h2>
@@ -109,9 +109,61 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
             </div>
 
+         </div>
+     </section>
+
+     <!-- Portfolio -->
+     <section class="portfolio container" id="portfolio">
+        <!-- Heading -->
+         <h2 class="heading">Portfolio</h2>
+         <!-- Portfolio Content -->
+          <div class="portfolio-content">
+            <div class="portfolio-box">
+                <img src="img/portfolio-1.webp" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                 <div class="portfolio-overlay">
+                    <h2>Web Development</h2>
+                    <a href="#">
+                        <i class='bx bx-link-alt' ></i>
+                    </a>
+                 </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="img/portfolio-2.webp" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                 <div class="portfolio-overlay">
+                    <h2>Web Design</h2>
+                    <a href="#">
+                        <i class='bx bx-link-alt' ></i>
+                    </a>
+                 </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="img/portfolio-3.webp" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                 <div class="portfolio-overlay">
+                    <h2>Cyber Security</h2>
+                    <a href="#">
+                        <i class='bx bx-link-alt' ></i>
+                    </a>
+                 </div>
+            </div>
+
+             <div class="portfolio-box">
+                <img src="img/portfolio-4.webp" alt="" class="portfolio-img">
+                <!-- Overlay -->
+                 <div class="portfolio-overlay">
+                    <h2>Others</h2>
+                    <a href="#">
+                        <i class='bx bx-link-alt' ></i>
+                    </a>
+                 </div>
+            </div>
 
           </div>
-     </section>
+     </section> 
 
     <script src="js/script.js"></script>
   </body>
