Project Section Completed

--- a/index.html
+++ b/index.html
@@ -165,6 +165,29 @@
           </div>
      </section> 
 
+     <!-- Projects -->
+      <section class="projects container" id="projects">
+        <!-- Heading -->
+         <h2 class="heading">Projects</h2>
+         <!-- Projects Content -->
+          <div class="projects-content">
+            <div class="project-box">
+                <h2>285+</h2>
+                <span>Projects Completed</span>
+            </div>
+
+            <div class="project-box">
+                <h2>190+</h2>
+                <span>Websites Developed</span>
+            </div>
+
+            <div class="project-box">
+                <h2>200+</h2>
+                <span>Happy Clients</span>
+            </div>
+          </div>
+      </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
