Reviews Section Completed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Sasmithx</title>
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- Link Swipper CSS -->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+
     <!-- Box Icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -187,6 +190,66 @@
             </div>
           </div>
       </section>
+
+      <!-- Review -->
+      <section class="container reviews" id="reviews">
+        <!-- Heading -->
+         <h2 class="heading">Reviews</h2>
+         <!-- Review Content -->
+          <div class="reviews-content swiper">
+             <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <!-- Review Box -->
+                  <div class="review-box">
+                    <i class='bx bxs-quote-right'></i>
+                    <p class="review-text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                    </p>
+                    <div class="review-profile">
+                      <h2>Audrey Bella</h2>
+                      <span>From Finland</span>
+                      <img src="img/review-1.jpg" alt="">
+                    </div>
+                  </div> 
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- Review Box -->
+                  <div class="review-box">
+                    <i class='bx bxs-quote-right'></i>
+                    <p class="review-text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                    </p>
+                    <div class="review-profile">
+                      <h2>Audrey Bella</h2>
+                      <span>From Finland</span>
+                      <img src="img/review-2.jpg" alt="">
+                    </div>
+                  </div> 
+                </div>
+
+
+                <div class="swiper-slide">
+                  <!-- Review Box -->
+                  <div class="review-box">
+                    <i class='bx bxs-quote-right'></i>
+                    <p class="review-text">
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                    </p>
+                    <div class="review-profile">
+                      <h2>Audrey Bella</h2>
+                      <span>From Finland</span>
+                      <img src="img/review-3.jpg" alt="">
+                    </div>
+                  </div> 
+                </div>
+             </div>
+              <div class="swiper-pagination"></div>
+          </div>
+      </section> 
+    
+    <!-- Link Swiper JS   -->
+    <script src="js/swiper-bundle.min.js"></script>
 
     <script src="js/script.js"></script>
   </body>
