completed portfolio footer section | Start responsive with media queries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     />
   </head>
   <body>
+    <!-- Scroll Top -->
+     <a href="#home" class="scroll-top">
+      <i class='bx bx-up-arrow-alt' ></i>
+     </a>
     <!-- Header -->
     <header>
       <!-- Nav -->
@@ -41,7 +45,7 @@
     </header>
 
     <!-- Home -->
-    <section class="home" container="home" id="home">
+    <section class="home" id="home">
       <div class="home-content">
         <div class="home-img">
           <img src="img/profile-pro.png" alt="" />
@@ -260,6 +264,24 @@
             <input type="submit" value="Send" class="send-btn">
           </form>
        </section>
+
+       <!-- Footer -->
+       <section class="footer container" id="footer">
+        <div class="social">
+            <a href="mailto:example@gmail.com"><i class='bx bx-envelope'></i></a>
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></i></a>
+           </div>
+           <!-- Footer Links -->
+            <div class="footer-links">
+              <a href="#">Privacy Policy</a>
+              <a href="#">Terms Of Use</a>
+              <a href="#">Disclaimer</a>
+            </div>
+            <!-- Copyright -->
+             <p>&#169; 2024 Sasmith Manawadu</p>
+       </section> 
 
     <!-- Email Js Link    -->
      <script type="text/javascript"
