Update introduction section in portfolio | Added a paragraph introducing myself as a software engineering student and full-stack developer | Highlighted key areas such as web applications and cybersecurity using styled spans | Improved readability with line breaks and color emphasis for important terms

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h3>Hello</h3>
           <h2>I'm <span class="color">Sasmith</span></h2>
           <p>
-            I'm <span class="color">CEO</span> of this company with a strong passion for building <span class="color">web application</span> & <span class="color">Cyber Security</span> with great user experience.
+            I'm <span class="color">software engineering student and full-stack developer</span>  with a strong passion for building <span class="color">web application</span> & exploring <span class="color">Cyber Security.</span> 
             <br>Here's a bit more <span class="color">about me.</span>
           </p>
 
