Update 'About Me' section with concise personal introduction

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
          <div class="about-content">
             <div class="about-data">
                 <span>About Me</span>
-                <h2>Web Developer, <br>
-                    Cyber Security & Web Designer
+                <h2>Software Engineer, <br>
+                    Full Stack Developer & Web Developer
                 </h2>
                 <a href="assets/Professional CV Resume.pdf" class="btn" download="">
                     Download CV
@@ -86,8 +86,8 @@
             </div>
             <div class="about-text">
                 <p>Hello! I am Sasmith Manawadu. Full Stack Developer</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, tempora, beatae</p>
-                <p>Get your project book with contact button.</p>
+                <p>I have a strong passion for building web applications and enhancing user experiences.</p>
+                <p>With a focus on both front-end and back-end technologies, I strive to deliver scalable and secure solutions.</p>
             </div>
          </div>
     </section>
