Added services content section with descriptions for Desktop Application, Web Application, and UI/UX Designing services

--- a/index.html
+++ b/index.html
@@ -99,24 +99,25 @@
         <div class="services-content">
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
-                <h2>Web Development</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+                <h2>Desktop Application</h2>
+                <p>Create modern desktop application with awesome ideas</p>
             </div>
 
             
             <div class="services-box">
                 <i class='bx bx-lock' ></i>
-                <h2>Cyber Security</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+                <h2>Web Application</h2>
+                <p>With a distinctive and performance-driven website, you can
+                spread the word about your company to the entire world.</p>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-brush' ></i>
-                <h2>Web Designing</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, iure accusantium! Iste, velit. Reprehenderit fugit debitis omnis velit! Accusamus porro nobis cum o</p>
+                <h2>UI/UX Designing</h2>
+                <p>create to the ui/ux part of the software with eyeCatching colors
+                and modern things</p>
             </div>
-
-         </div>
+          </div>
      </section>
 
      <!-- Portfolio -->
