portfolio section updated

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="img/portfolio-1.webp" alt="" class="portfolio-img">
                 <!-- Overlay -->
                  <div class="portfolio-overlay">
-                    <h2>Web Development</h2>
+                    <h2>Desktop Application</h2>
                     <a href="#">
                         <i class='bx bx-link-alt' ></i>
                     </a>
@@ -141,7 +141,7 @@
                 <img src="img/portfolio-2.webp" alt="" class="portfolio-img">
                 <!-- Overlay -->
                  <div class="portfolio-overlay">
-                    <h2>Web Design</h2>
+                    <h2>Web Application</h2>
                     <a href="#">
                         <i class='bx bx-link-alt' ></i>
                     </a>
@@ -152,7 +152,7 @@
                 <img src="img/portfolio-3.webp" alt="" class="portfolio-img">
                 <!-- Overlay -->
                  <div class="portfolio-overlay">
-                    <h2>Cyber Security</h2>
+                    <h2>UI/UX Design</h2>
                     <a href="#">
                         <i class='bx bx-link-alt' ></i>
                     </a>
