Reviews section updated

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
                     </p>
                     <div class="review-profile">
-                      <h2>Audrey Bella</h2>
-                      <span>From Finland</span>
+                      <h2>A</h2>
+                      <span>From Sri-Lanka</span>
                       <img src="img/review-1.jpg" alt="">
                     </div>
                   </div> 
@@ -226,8 +226,8 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
                     </p>
                     <div class="review-profile">
-                      <h2>Audrey Bella</h2>
-                      <span>From Finland</span>
+                      <h2>B</h2>
+                      <span>Sri-Lanka</span>
                       <img src="img/review-2.jpg" alt="">
                     </div>
                   </div> 
@@ -242,8 +242,8 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
                     </p>
                     <div class="review-profile">
-                      <h2>Audrey Bella</h2>
-                      <span>From Finland</span>
+                      <h2>C</h2>
+                      <span>From Sri-Lanka</span>
                       <img src="img/review-3.jpg" alt="">
                     </div>
                   </div> 
