Portfolio section Desktop Application update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
          <!-- Portfolio Content -->
           <div class="portfolio-content">
             <div class="portfolio-box">
-                <img src="img/portfolio-1.webp" alt="" class="portfolio-img">
+                <img src="img/Desktop.png" alt="" class="portfolio-img">
                 <!-- Overlay -->
                  <div class="portfolio-overlay">
                     <h2>Desktop Application</h2>
