Project content refactored | improved content quality

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
                   <div class="review-box">
                     <i class='bx bxs-quote-right'></i>
                     <p class="review-text">
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                       "Sasmith’s problem-solving skills and dedication to producing high-quality code made a significant difference in the success of our project. He takes pride in his work, and it shows in the robust and scalable applications he builds. I would highly recommend him to anyone looking for a professional and skilled software developer!"
                     </p>
                     <div class="review-profile">
-                      <h2>A</h2>
-                      <span>From Sri-Lanka</span>
+                      <h2>C. Rivera</h2>
+                      <span>From USA</span>
                       <img src="img/review-1.jpg" alt="">
                     </div>
                   </div> 
@@ -223,11 +223,11 @@
                   <div class="review-box">
                     <i class='bx bxs-quote-right'></i>
                     <p class="review-text">
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                      "Sasmith has an incredible knack for transforming complex business requirements into functional and efficient software solutions. His proficiency in both front-end and back-end development truly sets him apart. Thanks to his dedication, our project was completed ahead of schedule, and the quality of his work speaks for itself!"
                     </p>
                     <div class="review-profile">
-                      <h2>B</h2>
-                      <span>Sri-Lanka</span>
+                      <h2>B. Williams</h2>
+                      <span>From Australia</span>
                       <img src="img/review-2.jpg" alt="">
                     </div>
                   </div> 
@@ -239,11 +239,11 @@
                   <div class="review-box">
                     <i class='bx bxs-quote-right'></i>
                     <p class="review-text">
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quibusdam, nostrum accusantium modi dolore iste fugit doloribus inventore aspernatur quasi, exercitationem voluptas est aut ipsa ducimus velit, facere harum saepe.
+                     "Working with Sasmith was an absolute pleasure. His technical expertise in full-stack development allowed him to deliver a seamless, user-friendly application. He approaches every challenge with enthusiasm and innovation, ensuring that the final product not only met but exceeded our expectations!"
                     </p>
                     <div class="review-profile">
-                      <h2>C</h2>
-                      <span>From Sri-Lanka</span>
+                      <h2>D. Kumar</h2>
+                      <span>From India</span>
                       <img src="img/review-3.jpg" alt="">
                     </div>
                   </div> 
